--- a/.gitignore
+++ b/.gitignore
@@ -1,37 +1,34 @@
-# Local .terraform directories
-.terraform/
-
-# .tfstate files
+# Terraform
 *.tfstate
 *.tfstate.*
-
-# Crash log files
+*.tfvars
+!terraform.tfvars.example
+.terraform/
+.terraform.lock.hcl
 crash.log
 crash.*.log
-
-# Exclude all .tfvars files, which are likely to contain sensitive data, such as
-# password, private keys, and other secrets. These should not be part of version 
-# control as they are data points which are potentially sensitive and subject 
-# to change depending on the environment.
-*.tfvars
-*.tfvars.json
-
-# Ignore override files as they are usually used to override resources locally and so
-# are not checked in
 override.tf
 override.tf.json
 *_override.tf
 *_override.tf.json
+tfplan
+tfplan.*
 
-# Ignore transient lock info files created by terraform apply
-.terraform.tfstate.lock.info
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
 
-# Include override files you do wish to add to version control using negated pattern
-# !example_override.tf
+# OS
+.DS_Store
+Thumbs.db
 
-# Include tfplan files to ignore the plan output of command: terraform plan -out=tfplan
-# example: *tfplan*
+# Logs
+*.log
 
-# Ignore CLI configuration files
-.terraformrc
-terraform.rc
+# Secrets (never commit!)
+*.pem
+*.key
+secrets/
